MainTable: Font styling issues

--- a/src/scss/components/_data-table.scss
+++ b/src/scss/components/_data-table.scss
@@ -2,6 +2,7 @@
     width: 555px;
     max-width: 596px;
     margin-bottom: 48px;
+    font-family: $userfont;
 
     &:last-child {
         margin-bottom: 0;
