--- a/src/scss/components/_table.scss
+++ b/src/scss/components/_table.scss
@@ -8,6 +8,8 @@
 
     &__head {
         background: $secondary;
+        font-family: $userfont;
+        text-align: left;
     }
 
     &__head-cell {
