ApperanceUpd: Responsible table

--- a/src/scss/_mixins.scss
+++ b/src/scss/_mixins.scss
@@ -6,3 +6,9 @@
         src: url($furl) format('woff2');
     }
 }
+
+// breackpoints
+
+@mixin mobile {
+    @media (max-width: 600px) { @content }
+}
