--- a/src/scss/components/_data-table.scss
+++ b/src/scss/components/_data-table.scss
@@ -1,8 +1,11 @@
 .data-table {
-    width: 555px;
     max-width: 596px;
     margin-bottom: 48px;
     font-family: $userfont;
+
+    @include mobile {
+        max-width: 350px;
+    }
 
     &:last-child {
         margin-bottom: 0;
