--- a/src/scss/components/_table.scss
+++ b/src/scss/components/_table.scss
@@ -1,6 +1,7 @@
 .table {
     width: 100%;
     border-collapse: collapse;
+    background: $white;
 
     &__caption {
         display: none;
@@ -17,6 +18,10 @@
         color: $white;
         font-weight: 400;
 
+        @include mobile {
+            display: none;
+        }
+
         &:first-child {
             border-radius: 2px 0 0 0;
         }
@@ -26,35 +31,89 @@
         }
     }
 
-    &__body{
+    &__body {
         background-color: $white;
     }
 
-    &__cell {
-        padding: 9px 12px 7px 12px;
-        border: $stdborder;
-        color: $textcolor;
+    &__row {
+
+        &--empty {
+            @include mobile {
+                display: none;
+            }
+        }
+
+        &--empty-mobile {
+            .table__cell {
+                display: none;
+
+                @include mobile {
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    padding-top: 20px;
+                    font-weight: bold;
+                }
+            }
+        }
     }
 
-    &__buttons-wrap{
+    &__cell {
+        padding: 7px 12px;
+        min-height: 32px;
+        line-height: 16px;
+        border: $stdborder;
+        color: $textcolor;
+
+        @include mobile {
+            display: grid;
+            grid-template-columns: 130px 1fr;
+            border-bottom: none;
+
+            &--buttons {
+                display: block;
+            }
+
+            &:last-child {
+                margin-bottom: 20px;
+            }
+
+            &::before {
+                content: attr(data-cell);
+                font-weight: 700;
+                color: $black;
+                text-transform: capitalize;
+            }
+        }
+
+        &--name {
+            min-width: 96px;
+        }
+
+        &--surname {
+            min-width: 130px;
+        }
+
+        &--city {
+            min-width: 80px;
+        }
+
+        &--buttons {
+            min-width: 192px;
+        }
+    }
+
+    &__buttons-wrap {
         width: 100%;
         display: flex;
         justify-content: space-around;
     }
+
     &__row--empty {
         min-height: 32px;
-        height: 32px;
-     }
-}
 
-// .table { }
-// .table__caption { }
-// .table__head { }
-// .table__head-row { }
-// .table__head-cell { }
-// .table__body { }
-// 
-// .table__cell { }
-// .btn { }
-// .btn__edit { }
-// .btn__del { }
+        .table__cell {
+            height: 32px;
+        }
+    }
+}
