--- a/src/scss/components/_table.scss
+++ b/src/scss/components/_table.scss
@@ -116,4 +116,13 @@
             height: 32px;
         }
     }
+
+    &__modal{
+        background: $white;
+        padding: 20px;
+        border-radius: 4px;
+        box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+        font-size: 14px;
+        color: $black;
+    }
 }
